--- a/checkout.html
+++ b/checkout.html
@@ -149,7 +149,7 @@
       </div>
 
       <div class="success-buttons">
-        <a href="order.html">Xem đơn hàng</a>
+        <a href="#">Xem đơn hàng</a>
         <a href="index.html">Về trang chủ</a>
       </div>
     </div>
