--- a/policy.html
+++ b/policy.html
@@ -14,7 +14,10 @@
     <script src="js/jquery-3.7.1.min.js"></script>
     <title>Chính sách vận chuyển - Tào phớ Bình An</title>
   </head>
-
+  <!--Back to top -->
+  <button id="back-to-top" title="Lên đầu trang">
+    <i class="fas fa-arrow-up"></i>
+  </button>
   <body>
     <div class="header">
       <div class="top">
@@ -22,8 +25,7 @@
           <div class="top-left">
             <span id="hotline"> Hotline: <b> 0353 689 832 </b> </span>
             <span id="address"
-              >Địa chỉ: Số 34 Đường Phạm Sĩ Ái, Cầu Tình, Phố Nối, Mỹ Hào, Hưng
-              Yên</span
+              >Địa chỉ: Số 34 Đường Phạm Sĩ Ái, Phố Nối, Mỹ Hào, Hưng Yên</span
             >
           </div>
           <div class="top-right">
@@ -49,6 +51,59 @@
       </div>
       <div class="header-middle">
         <div class="container">
+          <div class="hamburger">
+            <i class="fa-solid fa-bars"></i>
+          </div>
+          <!-- Mobile menu -->
+          <div id="mobile-menu" class="mobile-menu">
+            <!-- Đăng nhập / Đăng ký -->
+            <div class="mobile-auth" id="mobile-auth">
+              <i class="fa fa-user"></i>
+              <span id="mobile-user-area" style="margin-left: 8px">
+                <a href="login.html">Đăng nhập</a> hoặc
+                <a href="signup.html">Đăng ký</a>
+              </span>
+              <span class="close-btn"><i class="fa fa-times"></i></span>
+            </div>
+
+            <!-- Tìm kiếm -->
+            <form id="mobile-search-form" class="mobile-search">
+              <input
+                type="text"
+                id="mobile-search-input"
+                placeholder="Tìm sản phẩm..."
+              />
+              <button type="submit"><i class="fa fa-search"></i></button>
+            </form>
+
+            <!-- Menu chính -->
+            <ul class="mobile-nav">
+              <li><a href="index.html">Trang chủ</a></li>
+              <li class="has-sub">
+                <a href="allproduct.html"
+                  >Sản phẩm <span class="arrow">›</span></a
+                >
+                <ul class="submenu">
+                  <li class="has-sub">
+                    <a href="#taopho">Tào phớ <span class="arrow">›</span></a>
+                    <ul class="submenu">
+                      <li><a href="#taopho">Tào phớ caramen</a></li>
+                      <li><a href="#taopho">Tào phớ thạch</a></li>
+                      <li><a href="#taopho">Tào phớ trân châu</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#">Trà sữa</a></li>
+                  <li><a href="garan.html#garan">Gà rán</a></li>
+                  <li><a href="#">Ăn vặt</a></li>
+                </ul>
+              </li>
+              <li><a href="news.html">Tin tức</a></li>
+              <li><a href="aboutme.html">Giới thiệu</a></li>
+              <li><a href="contact.html">Liên hệ</a></li>
+              <li><a href="#">Khuyến mãi</a></li>
+            </ul>
+          </div>
+
           <div class="header-middle-left">
             <div class="header-logo">
               <a href="index.html">
@@ -66,7 +121,7 @@
                 class="form-search-input"
                 placeholder="Tìm kiếm món ăn..."
               />
-              <button class="filter-btn">
+              <button type="submit" class="filter-btn">
                 <i class="fa-solid fa-filter"></i><span>Lọc</span>
               </button>
             </form>
@@ -80,8 +135,10 @@
               </li>
               <li class="header-middle-right-item">
                 <div class="cart-icon-menu">
-                  <i class="fa-solid fa-basket-shopping"></i>
-                  <span class="count-product-cart">0</span>
+                  <a href="cart.html" class="cart-icon">
+                    <i class="fa-solid fa-basket-shopping"></i>
+                    <span class="count-product-cart">0</span>
+                  </a>
                 </div>
                 <span> &nbsp;&nbsp; <a href="cart.html"> Giỏ hàng</a></span>
               </li>
@@ -89,6 +146,7 @@
           </div>
         </div>
       </div>
+      <div class="line-up"></div>
       <div id="menu">
         <div class="main-menu">
           <ul>
@@ -98,10 +156,10 @@
               >
             </li>
             <li>
-              <a href="allproduct.html">Sản phẩm »</a>
+              <a href="allproduct.html">Sản phẩm</a>
               <ul>
-                <li><a href="#">Tào phớ ngon tuyệt đỉnh</a></li>
-                <li><a href="#">Gà rán hảo hạng</a></li>
+                <li><a href="#taopho">Tào phớ ngon tuyệt đỉnh</a></li>
+                <li><a href="garan.html#garan">Gà rán hảo hạng</a></li>
                 <li><a href="#">Sữa chua thơm mát lành</a></li>
                 <li><a href="#">Nước ngọt như nụ cười em</a></li>
                 <li><a href="#">Tàu hũ truyền thống</a></li>
@@ -114,21 +172,6 @@
           </ul>
         </div>
       </div>
-      <script>
-        $(document).ready(function () {
-          // Hover vào mục cha
-          $("#menu ul > li").hover(
-            function () {
-              // Khi hover: tìm thẻ ul con và trượt xuống
-              $(this).find("ul").stop(true, true).slideDown(300);
-            },
-            function () {
-              // Khi rời chuột: trượt lên
-              $(this).find("ul").stop(true, true).slideUp(300);
-            }
-          );
-        });
-      </script>
 
       <div class="container-product-cart">
         <div class="breadcrumb">
@@ -140,7 +183,8 @@
           <div class="container-policy">
             <h2>CHÍNH SÁCH VẬN CHUYỂN</h2>
             <p id="p1">
-              Áp dụng cho toàn bộ đơn hàng của Quý khách tại cửa hàng
+              Áp dụng cho toàn bộ đơn hàng của <br />
+              Quý khách tại cửa hàng
             </p>
             <div class="about-us">
               <h3>1. Khu vực áp dụng</h3>
@@ -220,10 +264,12 @@
     <footer class="footer">
       <div class="container">
         <div class="footer-top">
+          <div class="footer-top-img">
+            <a href="index.html"
+              ><img src="Images/logo_clean.png" alt="Logo Tào Phớ Bình An"
+            /></a>
+          </div>
           <div class="footer-top-content">
-            <div class="footer-top-img">
-              <img src="Images/logo_clean.png" alt="Logo Tào Phớ Bình An" />
-            </div>
             <div class="footer-top-subbox">
               <div class="footer-top-subs">
                 <h2 class="footer-top-subs-title">Đăng ký nhận tin</h2>
@@ -249,7 +295,7 @@
       <div class="widget-area">
         <div class="container">
           <div class="widget-row row">
-            <div class="widget-row-col-1 col-t-12 col-s-3 col-m-4">
+            <div class="widget-row-col-1 col-t-12 col-s-12 col-m-4">
               <h3 class="widget-title">Về chúng tôi</h3>
               <div class="widget-row-col-content">
                 <p>
@@ -318,38 +364,38 @@
               <h3 class="widget-title">Thực đơn</h3>
               <ul class="widget-contact">
                 <li class="widget-contact-item">
-                  <a href="allproduct.html"
+                  <a href="index.html"
                     ><i class="fa-solid fa-arrow-right"></i
                     ><span>Tào phớ</span></a
                   >
                 </li>
                 <li class="widget-contact-item">
-                  <a href="allproduct.html"
+                  <a href="index.html"
                     ><i class="fa-solid fa-arrow-right"></i
                     ><span>Trà sữa</span></a
                   >
                 </li>
                 <li class="widget-contact-item">
-                  <a href="allproduct.html"
+                  <a href="index.html"
                     ><i class="fa-solid fa-arrow-right"></i
                     ><span>Gà rán</span></a
                   >
                 </li>
                 <li class="widget-contact-item">
-                  <a href="allproduct.html"
+                  <a href="index.html"
                     ><i class="fa-solid fa-arrow-right"></i
                     ><span>Tàu hũ</span></a
                   >
                 </li>
                 <li class="widget-contact-item">
-                  <a href="allproduct.html"
+                  <a href="index.html"
                     ><i class="fa-solid fa-arrow-right"></i
                     ><span>Nước ngọt</span></a
                   >
                 </li>
               </ul>
             </div>
-            <div class="widget-row-col-1 col-t-12 col-s-3 col-m-3">
+            <div class="widget-row-col-1 col-t-12 col-s-5 col-m-3">
               <h3 class="widget-title">Liên hệ</h3>
               <div class="contact">
                 <div class="contact-item">
@@ -436,26 +482,8 @@
       </a>
     </div>
     <script src="js/cart.js"></script>
-    <script>
-      document.addEventListener("DOMContentLoaded", () => {
-        // Kiểm tra trạng thái đăng nhập
-        const userSection = document.getElementById("user-section");
-        const user = JSON.parse(localStorage.getItem("user"));
-        if (user) {
-          userSection.innerHTML = `
-                  <i class="fa-solid fa-user"></i>
-                  <span style="margin-left: 8px; color: #333;">${user.name}</span>
-                  <a href="#" onclick="logout()" style="margin-left: 8px; color: #b5292f; text-decoration: none;">Đăng xuất</a>
-              `;
-        }
-      });
-
-      function logout() {
-        localStorage.removeItem("user");
-        localStorage.removeItem("loginTime");
-        localStorage.removeItem("remember");
-        window.location.reload();
-      }
-    </script>
+    <script src="js/search.js"></script>
+    <script src="admin/script.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
