--- a/signup.html
+++ b/signup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="css/main.css" />
-    <link rel="stylesheet" type="text/css" href="css/signup.css" />
+    <link rel="stylesheet" type="text/css" href="css/register.css" />
     <link rel="icon" type="image/png" href="Images/icon.png" />
     <link
       rel="stylesheet"
@@ -13,6 +13,10 @@
     <script src="js/jquery-3.7.1.min.js"></script>
     <title>Đăng ký - Tào phớ Bình An</title>
   </head>
+  <!--Back to top -->
+  <button id="back-to-top" title="Lên đầu trang">
+    <i class="fas fa-arrow-up"></i>
+  </button>
   <body>
     <div class="header">
       <div class="top">
@@ -47,6 +51,59 @@
       </div>
       <div class="header-middle">
         <div class="container">
+          <div class="hamburger">
+            <i class="fa-solid fa-bars"></i>
+          </div>
+          <!-- Mobile menu -->
+          <div id="mobile-menu" class="mobile-menu">
+            <!-- Đăng nhập / Đăng ký -->
+            <div class="mobile-auth" id="mobile-auth">
+              <i class="fa fa-user"></i>
+              <span id="mobile-user-area" style="margin-left: 8px">
+                <a href="login.html">Đăng nhập</a> hoặc
+                <a href="signup.html">Đăng ký</a>
+              </span>
+              <span class="close-btn"><i class="fa fa-times"></i></span>
+            </div>
+
+            <!-- Tìm kiếm -->
+            <form id="mobile-search-form" class="mobile-search">
+              <input
+                type="text"
+                id="mobile-search-input"
+                placeholder="Tìm sản phẩm..."
+              />
+              <button type="submit"><i class="fa fa-search"></i></button>
+            </form>
+
+            <!-- Menu chính -->
+            <ul class="mobile-nav">
+              <li><a href="index.html">Trang chủ</a></li>
+              <li class="has-sub">
+                <a href="allproduct.html"
+                  >Sản phẩm <span class="arrow">›</span></a
+                >
+                <ul class="submenu">
+                  <li class="has-sub">
+                    <a href="#taopho">Tào phớ <span class="arrow">›</span></a>
+                    <ul class="submenu">
+                      <li><a href="#taopho">Tào phớ caramen</a></li>
+                      <li><a href="#taopho">Tào phớ thạch</a></li>
+                      <li><a href="#taopho">Tào phớ trân châu</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#">Trà sữa</a></li>
+                  <li><a href="garan.html#garan">Gà rán</a></li>
+                  <li><a href="#">Ăn vặt</a></li>
+                </ul>
+              </li>
+              <li><a href="news.html">Tin tức</a></li>
+              <li><a href="aboutme.html">Giới thiệu</a></li>
+              <li><a href="contact.html">Liên hệ</a></li>
+              <li><a href="#">Khuyến mãi</a></li>
+            </ul>
+          </div>
+
           <div class="header-middle-left">
             <div class="header-logo">
               <a href="index.html">
@@ -87,6 +144,7 @@
           </div>
         </div>
       </div>
+      <div class="line-up"></div>
       <div id="menu">
         <div class="main-menu">
           <ul>
@@ -96,7 +154,7 @@
               >
             </li>
             <li>
-              <a href="allproduct.html">Sản phẩm »</a>
+              <a href="allproduct.html">Sản phẩm </a>
               <ul>
                 <li><a href="#">Tào phớ ngon tuyệt đỉnh</a></li>
                 <li><a href="#">Gà rán hảo hạng</a></li>
@@ -112,18 +170,7 @@
           </ul>
         </div>
       </div>
-      <script>
-        $(document).ready(function () {
-          $("#menu ul > li").hover(
-            function () {
-              $(this).find("ul").stop(true, true).slideDown(300);
-            },
-            function () {
-              $(this).find("ul").stop(true, true).slideUp(300);
-            }
-          );
-        });
-      </script>
+
       <div id="container">
         <div id="wrapper">
           <div id="signup-box">
@@ -421,26 +468,6 @@
     <script src="js/cart.js"></script>
     <script src="js/signup.js"></script>
     <script src="admin/script.js"></script>
-    <script>
-      document.addEventListener("DOMContentLoaded", () => {
-        // Kiểm tra trạng thái đăng nhập
-        const userSection = document.getElementById("user-section");
-        const user = JSON.parse(localStorage.getItem("user"));
-        if (user) {
-          userSection.innerHTML = `
-                  <i class="fa-solid fa-user"></i>
-                  <span style="margin-left: 8px; color: #333;">${user.name}</span>
-                  <a href="#" onclick="logout()" style="margin-left: 8px; color: #b5292f; text-decoration: none;">Đăng xuất</a>
-              `;
-        }
-      });
-
-      function logout() {
-        localStorage.removeItem("user");
-        localStorage.removeItem("loginTime");
-        localStorage.removeItem("remember");
-        window.location.reload();
-      }
-    </script>
+    <script src="js/main.js"></script>
   </body>
 </html>
